[tool.poetry]
name = "rssfeed"
version = "0.1.0"
description = ""
authors = ["Jimmy <datamikolaj@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
torch = "^2.2.2"
transformers = "^4.39.2"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
